--- a/cmd/wics/docker-compose.yml
+++ b/cmd/wics/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: "redis:latest"
     ports:
       - "6379:6379"
-    volumes:
-      - "./data/redis:/data"
+    #volumes:
+    #  - "./data/redis:/data"
