--- a/cmd/wics/docker-compose.yml
+++ b/cmd/wics/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3'
 services:
   redis:
     image: "redis:latest"
+    container_name: wics_redis
     ports:
       - "6379:6379"
-    #volumes:
-    #  - "./data/redis:/data"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - "./data/redis:/data"
+
