update grpc server

--- a/cmd/server/.env.example
+++ b/cmd/server/.env.example
@@ -2,5 +2,7 @@ AUTH0_M2M_CLIENT_ID=
 AUTH0_M2M_CLIENT_SECRET=
 AUTH0_DOMAIN=
 AUTH0_AUDIENCE=
+AUTH0_DATABASE_CONNCTION_ID=
+AUTH0_DATABASE_CONNCTION_NAME=
 
 JWT_SECRET=
