--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
-AUTH0_M2M_CLIENT_ID=
-AUTH0_M2M_CLIENT_SECRET=
+GOPRIVATE=
+
 AUTH0_DOMAIN=
 AUTH0_AUDIENCE=
-AUTH0_DATABASE_CONNCTION_ID=
-AUTH0_DATABASE_CONNCTION_NAME=
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_CALLBACK_URL=
+
+SIGNAL_SERVER_HOST=
+SIGNAL_SERVER_PORT=
+
+SERVER_HOST=
+SERVER_PORT=
 
 JWT_SECRET=
+JWT_ISS=
+JWT_AUD=
