--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .env
 
 # vscode
-.vscode
+.vscode/*
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
