--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,17 @@
 
 # vscode
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
